<resources>
    <string name="app_name">KumVulanDFreelancer</string>
    <string name="home">Home</string>
    <string name="jobs">Jobs</string>
    <string name="account">Account</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="guest_page_image">guest page image</string>
    <string name="guest_login_desc">You are using guest session, which means you won\'t be able to take jobs!</string>
    <string name="prompt_guest_login">To login / register, use the following</string>
    <string name="login_register">Login/Register</string>
    <string name="profile_image">Profile image</string>
    <string name="profile_jobs_done">Jobs done: %1$s</string>
    <string name="profile_rating">Rating: %1$s ★</string>
    <string name="profile_skills">Skills:</string>
    <string name="profile_about">About me: </string>
    <string name="academic_record">Academic record: </string>
    <string name="profile_review">Reviews: </string>
    <string name="profile_logout">Log out</string>
    <string name="profile_not_logged_in">You are not logged in!</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="about_me">About me</string>
    <string name="academic_record_e">Academic record</string>
    <string name="skills_e">Skills</string>
    <string name="save_changes">Save changes</string>
    <string name="facebook_app_id">2389339031320860</string>
    <string name="fb_login_protocol_scheme">fb2389339031320860</string>
    <string name="add_new_skill">Add new skill</string>
    <string name="create_new_user">Create new user</string>
    <string name="tell_us_your_name">Tell us your name</string>
    <string name="my_name_is">My name is</string>
    <string name="submit">Submit</string>
    <string name="register_as_freelancer">Register as freelancer</string>
    <string name="loading">Loading...</string>
    <string name="search_for_job">Search for job</string>
    <string name="you_have_no_active_job">You have no on going job!</string>
    <string name="your_active_job">Your taken job(s)</string>
    <string name="other_party">Other party</string>
    <string name="deadline">Deadline</string>
    <string name="finish_job">Finish job</string>
    <string name="cancel_job">Cancel job</string>
    <string name="status">Status</string>
    <string name="on_going">On going</string>
    <string name="description">Description</string>
    <string name="freelancer">Freelancer</string>
    <string name="client">Client</string>
    <string name="price">Price</string>
    <string name="issue_new_job">Issue new job +</string>
    <string name="waiting_confirmation">Waiting confirmation</string>
    <string name="about_us_and_disclaimer">About us and Disclaimer</string>
    <string name="applicants">Applicants</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="job_category">Category</string>
    <string name="chat_people_prompt">Choose a category</string>
    <string name="history_sort_prompt">Choose a category</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua.</string>
    <string-array name="chat_people_categories">
        <item>All</item>
        <item>Archived</item>
        <item>Starred</item>
    </string-array>
    <string-array name="role_array">
        <item>Client</item>
        <item>Freelancer</item>
    </string-array>
    <string-array name="history_sort_array">
        <item>None</item>
        <item>Deadline</item>
        <item>Price</item>
    </string-array>
    <string-array name="review_sort_array">
        <item>None</item>
        <item>Name</item>
        <item>Rating</item>
    </string-array>
    <string-array name="job_categories_array">
        <item>None</item>
        <item>Web App</item>
        <item>Phone App</item>
        <item>Desktop App</item>
        <item>Game</item>
        <item>API</item>
        <item>Database</item>
        <item>Custom App</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_icon">📂</string>
</resources>
