<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bottom_border"
        android:text="@string/home"
        android:textAlignment="center"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="286dp"
        android:contentDescription="@string/guest_page_image"
        app:srcCompat="@drawable/guest_cartoon"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guest_login_desc"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/loginRegisterBtn"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/login_register"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>