<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:background="@drawable/account_background"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="113dp"
                android:layout_height="113dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/profile_image"

                android:cropToPadding="false"
                android:fitsSystemWindows="false"
                android:src="@drawable/guest_picture"/>

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile_not_logged_in"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="22sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLoginRegister"
            android:layout_width="216dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/login_register"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btnAboutAndDisclaimerGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/about_us_and_disclaimer"
            android:textColor="@android:color/holo_red_dark"/>


    </LinearLayout>

</ScrollView>
