<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterClientActivity"
    android:background="@drawable/blue_green_gradient"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:text="@string/create_new_user"
        android:textSize="25sp"
        android:paddingLeft="15dp"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/soft_border_white"
            android:layout_gravity="center"
            android:layout_marginTop="-30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:text="@string/tell_us_your_name"
                android:textSize="25sp"
                android:textColor="#000000"
                android:background="@drawable/new_user_header"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/bottom_border"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/my_name_is"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="-25dp"
                    android:textSize="20sp"/>

            </LinearLayout>

            <Button
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_green_gradient"
                android:layout_gravity="end"
                android:textColor="#ffffff"
                android:text="@string/submit"
                android:id="@+id/btnSubmit"
                android:layout_marginTop="-60dp"
                android:layout_marginRight="15dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>