<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/soft_border_white"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="6dp"
    android:paddingBottom="6dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtJobName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="lorem name dummy"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="7dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_going"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgOtherParty"
            android:layout_width="55dp"
            android:layout_height="70dp"
            android:layout_marginRight="8dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/otherPartyContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_party"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txtOtherParty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:ellipsize="end"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/txtDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11/02/2020"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btnFinishJob"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/soft_border_green"
            android:padding="5dp"
            android:text="@string/finish_job"
            android:textColor="#ffffff"
            android:textSize="13sp"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

</LinearLayout>