<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_loading"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:translationZ="90dp"
            android:layout_marginTop="300dp"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/brownishOrange"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".EditProfileActivity"
            android:orientation="vertical"
            android:background="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bottom_border">

                <TextView
                    android:id="@+id/text_home"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:text="@string/profile_edit"
                    android:textSize="20sp"
                    android:paddingLeft="15dp"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/btnCommit"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="✓"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="-45dp"
                    android:textColor="#3B70E7"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/profile_image"
                    android:cropToPadding="false"
                    android:fitsSystemWindows="false"
                    tools:src="@drawable/ddd" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/name"/>

                <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/skills_e"/>

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/skillsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:alignContent="stretch"
                    app:alignItems="stretch"
                    app:flexWrap="wrap">

                </com.google.android.flexbox.FlexboxLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/add_new_skill"
                        android:layout_weight="0.78"
                        android:id="@+id/txtSkill"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/blue_green_gradient"
                        android:layout_gravity="center_vertical"
                        android:textColor="#ffffff"
                        android:text="ADD"
                        android:layout_weight="0.22"
                        android:id="@+id/btnAddSkill"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/about_me"/>

                <EditText
                    android:id="@+id/txtAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/academic_record_e"/>

                <EditText
                    android:id="@+id/txtAcademic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>